hotfix missing alt

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
         <main class="content">
             <section class="profile">
-                <img src="./images/profile-image.png" alt="" class="profile__avatar">
+                <img src="./images/profile-image.png" alt="profile image" class="profile__avatar">
                     <div class="profile__column">
                         <div class="profile__row">
                             <h2 class="profile__name">Jacques Cousteau</h2>
