--- a/index.html
+++ b/index.html
@@ -8,80 +8,79 @@
 </head>
 <body class="page">
     <div class="page__container">
-        <section class="header">
+        <header class="header">
             <div class="header__logo"></div>
-            <hr class="header__line">
-        </section>
+        </header>
         <main class="content">
             <section class="profile">
                 <img src="./images/profile-image.png" alt="profile image" class="profile__avatar">
                     <div class="profile__column">
                         <div class="profile__row">
-                            <h2 class="profile__name">Jacques Cousteau</h2>
-                            <button class="profile__edit-btn"></button>
+                            <h1 class="profile__name">Jacques Cousteau</h1>
+                            <button class="profile__edit-btn" type="submit"></button>
                         </div>
                         <p class="profile__description">Explorer</p> 
                     </div>
-                <button class="profile__add-btn"></button>
+                <button class="profile__add-btn" type="submit"></button>
             </section>
             <section class="elements">
                 <div class="elements__card">
                     <img src="./images/yosemite.png" alt="River through Yosemite Valley" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Yosemite Valley</h2>
-                        <button class="elements__like-btn"></button>
+                        <button class="elements__like-btn" type="submit"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/lake-louise.png" alt="Calm Lake Louise" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Lake Louise</h2>
-                        <button class="elements__like-btn"></button>
+                        <button class="elements__like-btn" type="submit"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/bald-mountains.png" alt="Sunset Over the bald Mountains" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Bald Mountains</h2>
-                        <button class="elements__like-btn"></button>
+                        <button class="elements__like-btn" type="submit"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/latemar.png" alt="Latemar at Night" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Latemar</h2>
-                        <button class="elements__like-btn"></button>
+                        <button class="elements__like-btn" type="submit"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/vanoise.png" alt="Early Morning at Vanoise National Park" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Vanoise National Park</h2>
-                        <button class="elements__like-btn"></button>
+                        <button class="elements__like-btn" type="submit"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/lago-di-braies.png" alt="Row Boats at Lago di Braies" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Lago di Braies</h2>
-                        <button class="elements__like-btn"></button>
+                        <button class="elements__like-btn" type="submit"></button>
                     </div>
                 </div>
             </section>
         </main>
-        <section class="footer">
-            <h3 class="footer__text">&#169; 2020 Around the U.S.</h3>
-        </section>    
+        <footer class="footer">
+            <p class="footer__text">&#169; 2020 Around the U.S.</p>
+        </footer>    
     </div>
 
     <div class="popup">
-        <button class="popup__close"></button>
+        <button class="popup__close" type="submit"></button>
         <div class="popup__container">
-            <form action="#" method class="popup__form">
+            <form action="#" method="post" class="popup__form" name="profile-form">
                 <h3 class="popup__title">Edit profile</h3>
                 <input type="text" name="name" class="popup__input popup__input_type_name" value="Jacques Cousteau">
                 <input type="text" name="description" class="popup__input popup__input_type_desc" value="Explorer">
-                <button class="popup__save">Save</button>
+                <button class="popup__save" type="submit">Save</button>
             </form>
         </div>
     </div>
