Made a few changes to html, css, and js

--- a/index.html
+++ b/index.html
@@ -17,53 +17,53 @@
                     <div class="profile__column">
                         <div class="profile__row">
                             <h1 class="profile__name">Jacques Cousteau</h1>
-                            <button class="profile__edit-btn" type="submit"></button>
+                            <button class="profile__edit-btn" type="button"></button>
                         </div>
                         <p class="profile__description">Explorer</p> 
                     </div>
-                <button class="profile__add-btn" type="submit"></button>
+                <button class="profile__add-btn" type="button"></button>
             </section>
             <section class="elements">
                 <div class="elements__card">
                     <img src="./images/yosemite.png" alt="River through Yosemite Valley" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Yosemite Valley</h2>
-                        <button class="elements__like-btn" type="submit"></button>
+                        <button class="elements__like-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/lake-louise.png" alt="Calm Lake Louise" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Lake Louise</h2>
-                        <button class="elements__like-btn" type="submit"></button>
+                        <button class="elements__like-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/bald-mountains.png" alt="Sunset Over the bald Mountains" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Bald Mountains</h2>
-                        <button class="elements__like-btn" type="submit"></button>
+                        <button class="elements__like-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/latemar.png" alt="Latemar at Night" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Latemar</h2>
-                        <button class="elements__like-btn" type="submit"></button>
+                        <button class="elements__like-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/vanoise.png" alt="Early Morning at Vanoise National Park" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Vanoise National Park</h2>
-                        <button class="elements__like-btn" type="submit"></button>
+                        <button class="elements__like-btn" type="button"></button>
                     </div>
                 </div>
                 <div class="elements__card">
                     <img src="./images/lago-di-braies.png" alt="Row Boats at Lago di Braies" class="elements__card-image">
                     <div class="elements__card-description">
                         <h2 class="elements__card-title">Lago di Braies</h2>
-                        <button class="elements__like-btn" type="submit"></button>
+                        <button class="elements__like-btn" type="button"></button>
                     </div>
                 </div>
             </section>
@@ -74,7 +74,7 @@
     </div>
 
     <div class="popup">
-        <button class="popup__close" type="submit"></button>
+        <button class="popup__close" type="button"></button>
         <div class="popup__container">
             <form action="#" method="post" class="popup__form" name="profile-form">
                 <h3 class="popup__title">Edit profile</h3>
