fill src attribute

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="popup__image-ctr">
             <button class="popup__img-close" type="button"></button>
             <figure class="popup__figure">
-                <img class="popup__image" src="" alt="">
+                <img class="popup__image" src="#" alt="">
                 <figcaption class="popup__image-title"></figcaption>
             </figure>
         </div>
