Added in BEM fix and # to src

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </footer>    
     </div>
 
-    <div class="popup popup__type_edit-profile">
+    <div class="popup popup_type_edit-profile">
         <button class="popup__close" type="button"></button>
         <div class="popup__container">
             <form action="#" method="post" class="popup__form popup__form_type_edit-profile" name="profile-form">
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="popup popup__type_add-card">
+    <div class="popup popup_type_add-card">
         <button class="popup__close" type="button"></button>
         <div class="popup__container">
             <form action="#" method="post" class="popup__form popup__form_type_add-card" name="profile-form">
@@ -56,11 +56,11 @@
             </form>
         </div>
     </div>
-    <div class="popup popup__type_image">
+    <div class="popup popup_type_image">
         <div class="popup__image-ctr">
             <button class="popup__img-close" type="button"></button>
             <figure class="popup__figure">
-                <img class="popup__image" src="#" alt="">
+                <img class="popup__image" src="#" alt="#">
                 <figcaption class="popup__image-title"></figcaption>
             </figure>
         </div>
@@ -70,7 +70,7 @@
             <li class="elements__card">
                 <div class="elements__card-image">
                     <button type="button" class="elements__delete-btn"></button>
-                    <img src="#" alt="" class="elements__card-img">
+                    <img src="#" alt="#" class="elements__card-img">
                 </div>
                 <div class="elements__card-description">
                     <h2 class="elements__card-title"></h2>
